@@ -2,6 +2,7 @@ package ru.javawebinar.topjava;
 
 import org.springframework.test.web.servlet.ResultMatcher;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.function.BiConsumer;
 
@@ -41,7 +42,7 @@ public class TestMatcher<T> {
 
     @SafeVarargs
     public final void assertMatch(Iterable<T> actual, T... expected) {
-        assertMatch(actual, List.of(expected));
+        assertMatch(actual, Arrays.asList(expected));
     }
 
     public void assertMatch(Iterable<T> actual, Iterable<T> expected) {
@@ -54,7 +55,7 @@ public class TestMatcher<T> {
 
     @SafeVarargs
     public final ResultMatcher contentJson(T... expected) {
-        return contentJson(List.of(expected));
+        return contentJson(Arrays.asList(expected));
     }
 
     public ResultMatcher contentJson(Iterable<T> expected) {
