@@ -4,6 +4,7 @@ import ru.javawebinar.topjava.model.Role;
 import ru.javawebinar.topjava.model.User;
 import ru.javawebinar.topjava.web.json.JsonUtil;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
@@ -32,7 +33,7 @@ public class UserTestData {
 
     static {
         user.setMeals(meals);
-        admin.setMeals(List.of(adminMeal2, adminMeal1));
+        admin.setMeals(Arrays.asList(adminMeal2, adminMeal1));
     }
 
     public static User getNew() {
